--- a/pagination4.html
+++ b/pagination4.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -843,20 +844,22 @@
         </div>
         <!--    pagination start here -->
         <nav class="pagination_bottom">
-            <ul class="pagination justify-content-center mb-5">
-                <li class="page-item disabled" title="previous">
-                    <a href="" class="page-link rounded-circle m-1"> <i class="fas fa-chevron-left text_brown"></i></a>
-                </li>
-                <li class="page-item active"><a href="index.html" class="page-link rounded-circle m-1 text_brown1">1</a></li>
-                <li class="page-item"><a href="pagination2.html" class="page-link rounded-circle m-1 text_brown1">2</a></li>
-                <li class="page-item"><a href="pagination3.html" class="page-link rounded-circle m-1 text_brown1">3</a></li>
-                <li class="page-item"><a href="pagination4.html" class="page-link rounded-circle m-1 text_brown1">4</a></li>
-                <li class="page-item"><a href="pagination5.html" class="page-link rounded-circle m-1 text_brown1">5</a></li>
-                <li class="page-item" title="previous">
-                    <a href="pagination2.html" class="page-link rounded-circle m-1"> <i class="fas fa-chevron-right text_brown"></i></a>
-                </li>
-            </ul>
-        </nav>
+         <ul class="pagination justify-content-center mb-5">
+            <li class="page-item" title="previous" >
+                <a href="pagination3.html" class="page-link rounded-circle m-1"> <i class="fas fa-chevron-left text_brown"></i></a>
+             </li>
+             <li class="page-item"><a href="index.html" class="page-link rounded-circle m-1 text_brown1">1</a></li>
+             <li class="page-item"><a href="pagination2.html" class="page-link rounded-circle m-1 text_brown1">2</a></li>
+             <li class="page-item"><a href="pagination3.html" class="page-link rounded-circle m-1 text_brown1">3</a></li>
+             <li class="page-item active"><a href="pagination4.html" class="page-link rounded-circle m-1 text_brown1">4</a></li>
+             <li class="page-item"><a href="pagination5.html" class="page-link rounded-circle m-1 text_brown1">5</a></li>
+
+              <li class="page-item" title="previous" >
+                <a href="pagination5.html" class="page-link rounded-circle m-1"> <i class="fas fa-chevron-right text_brown"></i></a>
+             </li>
+             
+         </ul>
+     </nav>
         <!-- pagination end here -->
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
